PDO, передача данных из контроллера в виды

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 AddDefaultCharset utf-8
-
+Options All -Indexes
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
